<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8sp"
    android:background="#EDEDDF"
    tools:context=".AddCAActivity">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="#000"
        android:text="@string/tvAddCA"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--tai khoan-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/account"/>

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAccount"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/spinAccount"/>

            <!--loai giao dich-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/loaigiaodich"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTypeCA"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/spinTypeCA"/>

            <!--So tien-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/money"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAmount"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:id="@+id/edAmount"
                android:ems="10"
                android:hint="Nhập số tiền"
                android:inputType="number">
                <requestFocus/>
            </EditText>

            <!--ly do-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/lydo"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvReason"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:id="@+id/edReason"
                android:ems="10"
                android:hint="Nhập lý do giao dịch"/>

            <!--phan nhom-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/phannhom"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvGroup"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/spinGroup"/>

            <!--trang thai-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/trangthai"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvStatus"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/spinStatus"/>

            <!--Ngay giao dichj-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/date"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDateCA"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:id="@+id/edDateCA"
                    android:ems="10"
                    android:hint="Ngày giao dịch"
                    android:inputType="date"
                    android:textColor="#000"
                    android:layout_marginLeft="15sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar_picker"
                    android:id="@+id/imgDatePicker"
                    android:padding="2dp"
                    android:layout_alignBottom="@+id/edDateCA"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"/>
            </RelativeLayout>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSave"
                android:padding="10dp"
                android:text="Lưu"
                android:background="#646464"
                android:textColor="#14efe4"
                android:layout_gravity="center"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>